style(frontend): 💄 Centered form svg and border
Lots of classes in form tldr

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import "@styles/index.sass";
       height: 100px;
     }
   </style>
-  <body class="bg-black text-tahiti-dark">
+  <body class="bg-slate-900 text-tahiti-dark">
     <FileUpload client:load />
   </body>
   <script></script>
