--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import "@styles/index.sass";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>Astro</title>
+    <!-- <script is:inline src="src/scripts/brkline.js"></script> -->
   </head>
   <style>
     #drop_zone {
@@ -18,9 +19,8 @@ import "@styles/index.sass";
       width: 200px;
       height: 100px;
     }
-  </style>
+    </style>
   <body class="bg-slate-900 text-tahiti-dark">
     <FileUpload client:load />
   </body>
-  <script></script>
-</html>
+  </html>
