--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -7,16 +7,16 @@
 	display: none
 
 #diarized_text
-	max-width: 100%
-	max-height: 100%
+	max-width: 50%
+	margin: auto
 
-.personal_card
+.personal_cards
 	max-height: 2rem
 	display: flex
 	flex-wrap: wrap
 
-.personal_card,
-.personal_card > p.text
+.personal_cards,
+.personal_cards > p.text
 	position: relative
 
 p.text
