--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -1,3 +1,9 @@
+:root
+	--primary-color: #ff0000
+	--secondary-color: #00ff00
+	--default-background: #1e293b
+
+
 *, body, html
 	margin: 0
 	padding: 0
@@ -35,40 +41,69 @@ p.text
 	width: 50%
 	padding: 10px
 
-.test:before
-	content: ""
-	position: absolute
-	border: 1px solid transparent
-	top: 0.9rem
-	left: 1.5rem
-	width: 4rem
-	height: 4rem
-	transition: border 1s
+.space
+	background-color: var(--default-background)
+	white-space: pre
+	height: 24px
 
-.test:hover::before
-	animation: animate 1.5s forwards
+// .card_wrapper
+// 	position: absolute
 
-@keyframes animate
-	0%
-		width: 4rem
-		height: 4rem
-		border-top: 1px solid #000
-		border-left: 1px solid #000
 
-	25%
-		width: 4rem
-		height: 4rem
+.personal_cards.expanded
+		// position: absolute
+		z-index: 10
+		max-width: 24rem
+		max-height: 24rem
+		height: 100%
+		color: #ffffffda
+		padding: 1.5rem
+		background-color: #202022
+		
+		pointer-events: auto
+		cursor: pointer
+		
+		transform: scale(1)
+		opacity: 1
+		transition: all 150ms ease-in-out 
+		
+		display: flex
+		flex-direction: column
 
-	// 50%
-	// 	width: 4rem
-	// 	height: 4rem
+		&:after
+			content: ""
+			height: 1rem
+			width: 1rem
+			border-radius: 50%
+			box-shadow: inset 2px -3px 3px #bb86fc
+			top: 0.625rem
+			background-color: transparent
+			
+			position: absolute
+			right: 0
 
-	// 75%
+		p.text,
+		p.details
+			position: relative
+			height: 24px
+			background: #f0f0f0
+			color: #191919
+			display: block
+			flex-grow: 1
+			padding: 0.1rem
+			margin: 0.1rem
+			justify-content: center
+			text-align: center		
 
-	100%
-		width: 4rem
-		height: 4rem
-		border-top: 1px solid #000
-		border-left: 1px solid #000
-		border-bottom: 1px solid #000
-		border-right: 1px solid #000
+		span.space
+			display: none
+
+		p.text
+			&:before
+				content: "Text: "
+				position: relative
+				top: 0
+				left: 0
+				width: 100%
+				height: 100%
+				z-index: 1
