style(frontend): 💄 Styling stuff

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -30,6 +30,37 @@ p.text
 	margin-bottom: 1rem
 	white-space: pre
 	text-align: center
+	color: #ffffffda
+
+.S1 ~ p.text
+	border-bottom-color: #ff0000
+
+.S2 ~ p.text
+	border-bottom-color: #00ff00
+
+.S3 ~ p.text
+	border-bottom-color: #0000ff
+
+.S4 ~ p.text
+	border-bottom-color: #ffff00
+
+.S5 ~ p.text
+	border-bottom-color: #ff00ff
+
+.S6 ~ p.text
+	border-bottom-color: #00ffff
+
+.S7 ~ p.text
+	border-bottom-color: #ffffff
+
+.S8 ~ p.text
+	border-bottom-color: #000000
+
+.S9 ~ p.text	
+	border-bottom-color: #f000ff
+
+.S10 ~ p.text
+	border-bottom-color: #0f0ff0 
 
 .card-container
 	display: flex
