--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -82,59 +82,85 @@ p.text
 
 
 .personal_cards.expanded
-		// position: absolute
-		z-index: 10
-		max-width: 24rem
-		max-height: 24rem
-		height: 100%
-		color: #ffffffda
-		padding: 1.5rem
-		background-color: #202022
-		
-		pointer-events: auto
-		cursor: pointer
-		
-		transform: scale(1)
-		opacity: 1
-		transition: all 150ms ease-in-out 
-		
-		display: flex
-		flex-direction: column
+	// position: absolute
+	z-index: 10
+	max-width: 24rem
+	max-height: 24rem
+	height: 100%
+	color: #ffffffda
+	padding: 1.5rem
+	background-color: #202022
+	
+	pointer-events: auto
+	cursor: pointer
+	
+	transform: scale(1)
+	opacity: 1
+	transition: all 150ms ease-in-out 
+	
+	display: flex
+	flex-direction: column
 
-		&:after
-			content: ""
-			height: 1rem
-			width: 1rem
-			border-radius: 50%
-			box-shadow: inset 2px -3px 3px #bb86fc
-			top: 0.625rem
-			background-color: transparent
-			
-			position: absolute
-			right: 0
+	&:after
+		content: ""
+		height: 1rem
+		width: 1rem
+		border-radius: 50%
+		box-shadow: inset 2px -3px 3px #bb86fc
+		top: 0.625rem
+		background-color: transparent
+		
+		position: absolute
+		right: 0
 
-		p.text,
-		p.details
+	p.text,
+	p.details
+		position: relative
+		height: 24px
+		background: #f0f0f0
+		color: #191919
+		display: block
+		flex-grow: 1
+		padding: 0.1rem
+		margin: 0.1rem
+		justify-content: center
+		text-align: center		
+
+	span.space
+		display: none
+
+	p.text
+		&:before
+			content: "Text: "
 			position: relative
-			height: 24px
-			background: #f0f0f0
-			color: #191919
-			display: block
-			flex-grow: 1
-			padding: 0.1rem
-			margin: 0.1rem
-			justify-content: center
-			text-align: center		
+			top: 0
+			left: 0
+			width: 100%
+			height: 100%
+			z-index: 1
+			
+	body
+		font-family: Arial, sans-serif
 
-		span.space
-			display: none
+	.text-container
+		position: relative
+		margin: 50px
 
-		p.text
-			&:before
-				content: "Text: "
-				position: relative
-				top: 0
-				left: 0
-				width: 100%
-				height: 100%
-				z-index: 1
+	.hover-text-container
+		position: relative
+		display: inline-block
+
+	.hover-text
+		background-color: yellow
+		cursor: pointer
+
+	.hover-box
+		display: none
+		position: absolute
+		top: 1.5em // Adjust this to position the hover text correctly
+		left: 0
+		background-color: #f9f9f9
+		padding: 10px
+		border: 1px solid #ccc
+		z-index: 10
+
