--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import "@styles/index.sass";
       height: 100px;
     }
   </style>
-  <body class="bg-slate-800 text-tahiti-dark">
+  <body>
     <FileUpload client:load />
   </body>
 </html>
