--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -144,3 +144,10 @@ p.text
 			height: 100%
 			z-index: 1
 
+
+body
+	background-color: var(--default-background)
+	color: #ffffffda
+	font-family: 'Roboto', sans-serif
+	font-size: 1rem
+	overflow-x: hidden
