commiting stashed changes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@ import "@styles/index.sass";
       height: 100px;
     }
   </style>
+  <body>
     <FileUpload client:load />
   </body>
 </html>
