style(frontend): 💄 Changed the position from bottom to top [skip ci]
This might break the gray bg, I think the color might work differently on different resolutions

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -125,13 +125,11 @@ p.text
 		width: 0.9rem
 		box-shadow: 60px -16px #afafaf
 		border-radius: 100%
-		// bottom: 0.2rem
 		right: 3.93rem
 		background-color: transparent
 		position: absolute
 		opacity: 15%
-		bottom: 10.31rem
-		
+		top: 1.2rem
 
 	&:after
 		content: ""
