fix(backend): 🚑️ Fix not being able to upload to local dev server!
Issues fixed: Able to upload files now!

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,6 +20,6 @@ import "@styles/index.sass";
     }
   </style>
   <body>
-    <FileUpload client:load />
+    <FileUpload client:only="react" />
   </body>
 </html>
