--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,9 @@
 import FileUpload from "../components/FileUpload.jsx";
 import parseJSON from "@components/parser";
 import "@styles/index.sass";
+
+const data = await fetch("/api/upload")
+const res = await data.json()
 ---
 
 <html lang="en">
@@ -21,5 +24,6 @@ import "@styles/index.sass";
   </style>
   <body>
     <FileUpload client:only="react" />
+    <p class="invisible">{res.message}</p>
   </body>
 </html>
