--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -121,22 +121,22 @@ p.text
 
 	&:before
 		content: ""
-		height: .9rem
+		height: 0.9rem
 		width: 0.9rem
-		box-shadow: 60px -16px #afafaf
+		box-shadow: 60px -16px #a5a2a2
 		border-radius: 100%
 		right: 3.93rem
 		background-color: transparent
 		position: absolute
-		opacity: 15%
+		opacity: 10%
 		top: 1.2rem
-		
+
 	&:after
 		content: ""
-		height: .9rem
+		height: 0.9rem
 		width: 0.9rem
 		border-radius: 100%
-		box-shadow: inset 1px -3px 3px #cf1e1e
+		box-shadow: inset 1px -3px 3px #f10606
 		top: 0.2rem
 		right: 0.2rem
 		background-color: transparent
@@ -148,12 +148,12 @@ p.text
 		position: relative
 		height: 24px
 		width: 98%
-		background-color: #9c29ee
+		background-color: #9d22f5
 		color: #E0ffff
 		display: block
 		flex-grow: 1
-		padding: 0.1rem
-		margin: 0.1rem
+		padding: .05rem
+		margin: 0.05rem
 		justify-content: center
 		text-align: center		
 
